@@ -144,11 +144,11 @@ pinfo::exit (DWORD n)
 
   if (n != EXITCODE_NOSET)
     {
-      SetCurrentDirectory ("c:\\");	/* Move to an innocuous location to
-					   avoid races with other processes
-					   that may want to manipulate the
-					   current directory before this process
-					   has completely exited.  */
+      extern char windows_system_directory[];
+      /* Move to an innocuous location to avoid a race with other processes
+	 that may want to manipulate the current directory before this
+	 process has completely exited.  */
+      (void) SetCurrentDirectory (windows_system_directory);
       self->alert_parent (0);		/* Shave a little time by telling our
 					   parent that we have now exited.  */
     }
