@@ -1,3 +1,9 @@
+2005-02-07  Christopher Faylor  <cgf@timesys.com>
+
+	* exceptions.cc: Make windows_system_directory non-static.
+	* pinfo.cc (pinfo::exit): Change innocuous cd'ed location to one that
+	is more likely to exist.
+
 2005-02-06  Corinna Vinschen  <corinna@vinschen.de>
 
 	* path.cc (path_conv::check): Leave symlink expansion loop in case
